# GLEngine

./: .gitignore  CMakeLists.txt  GLEngine.sln  GLEngine.vcxproj  GLEngine.vcxproj.filters  Notes.md  README.md
Content/: CMakeLists.txt
Content/GLTF/astronaut_rigged_and_animated/: astronaut_rigged_and_animated.glb  license.txt
Content/GLTF/daji_hok/: license.txt  scene.gltf
Content/GLTF/goku_rigged__animated/: license.txt  scene.gltf
Content/Shaders/: csm.geom  empty.frag  input_structures.glsl  lightningShader.vert  pvpCsm.vert  pvpDepthPassCSM.vert  pvpMesh.frag  pvpMesh.vert  pvpMeshMdi.frag  pvpMeshMdi.vert  pvpShader.frag  pvpShader.vert  pvpShader_pbr.frag  pvpShader_solid.frag  pvpShader_textured.frag  pvpShadows.vert  shaderTexCoords.vert  simplequad.frag  simplequad.vert
Shaders/: lightmapShader.frag  lightningShader.frag  shader.frag  shader.vert
Src/: CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  EngineMath.cpp  EngineMath.h  InputConcepts.h  MultiTypeContainer.h  RefIgnore.h  Shader.cpp  Shader.h  World.h  WorldContainers.cpp  WorldContainers.h  WorldObject.cpp  WorldObject.h  cmake_install.cmake  main.cpp
Src/Assets/: AssetLoader.cpp  AssetLoader.h
Src/Graphics/: Shader.cpp  Shader.h
Src/Math/: Bounds.cpp  Bounds.h  EngineMath.cpp  EngineMath.h  Frustum.cpp  Frustum.h  Plane.cpp  Plane.h
Src/Render/: FrustumCulling.cpp  FrustumCulling.h  GeoSurface.h  GlBufferVector.cpp  GlBufferVector.h  GlCamera.cpp  GlCamera.h  GlDrawCommands.cpp  GlDrawCommands.h  GlIdTypes.h  GlRenderStructs.cpp  GlRenderStructs.h  GlRenderer.cpp  GlRenderer.h  GlShader.cpp  GlShader.h  GlShadowDepth.cpp  GlShadowDepth.h  Materials.cpp  Materials.h  RenderObject.cpp  RenderObject.h  SceneData.h  SceneGraph.cpp  SceneGraph.h  Skinning.cpp  Skinning.h  VertexStructs.h
Src/Tools/: ImguiTools.cpp  ImguiTools.h
Src/Utils/: Defer.h  ForEachIndexed.h  FuncVector.h  GenericConcepts.h  IdType.h  MultiTypeContainer.h  RefIgnore.h
quat_mul_generator/: euler_quats.cpp  euler_quats.h  quatmul_generator.py
